<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textSize="35dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/yellow"/>

    <TextView
        android:id="@+id/textViewCg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="41dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name"
        android:textSize="18dp"
        android:layout_alignBaseline="@+id/textViewCg"
        android:layout_alignBottom="@+id/textViewCg"
        android:layout_toRightOf="@+id/textViewCg"
        android:layout_toEndOf="@+id/textViewCg"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp" />

    <TextView
        android:id="@+id/last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="69dp"
        android:layout_below="@+id/editText1"
        android:layout_alignLeft="@+id/textViewCg"
        android:layout_alignStart="@+id/textViewCg" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:hint="@string/enter_last_name"
        android:layout_alignBottom="@+id/last"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignStart="@+id/editText1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/fill"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>